[package]
name = "sdac"
version = "0.1.0"
authors = ["The SDAC Authors"]
license = "MIT"
description = "Software Defined Acclerated Compute"
homepage = "https://github.com/xertai/sdac"
edition = "2021"
build = "build-cuda-driver.rs"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "sdac-server"
path = "src/main.rs"

[build-dependencies]
bindgen = { git = "https://github.com/rust-lang/rust-bindgen", branch="main" }

[dependencies]
tarpc = { version = "0.31.0", features = ["full"] }
tokio = { version = "1.24.2", features = ["macros", "net", "rt-multi-thread"] }
tokio-serde = "0.8.0"
futures-util = "0.3.25"
libloading = "0.7.4"
libc = "0.2.139"
futures = "0.3.25"
anyhow = "1.0.68"
